  wxIconizeEvent::IsIconized(), wxFileName::StripExtension(),
  wxXmlNode::GetAttribute[s](), wxXmlNode::AddAttribute().

All (GUI):

- Add wxBU_EXACTFIT support to wxToggleButton XRC handler (Ronny Krueger).
- wxRTC: fixed AltGr+key input on Windows.

wxMSW:

- Fixed generation of wxEVT_CHAR_HOOK events.
- Implement wxFileName::SetTimes() for directories (Steve Lamerton).



2.8.10:
-------

All:

- wxHashMap::insert() doesn't update the value if it didn't insert the element
  any more (Marcin Malich).
- Correct bug in wxTimeSpan::Format() for negative spans.
- Correct several bugs in wxList using end() iterators (Suzumizaki-Kimitaka).
- Added Vietnamese translation (Tran Ngoc Quan).
- Updated Slovenian translation (Martin Srebotnjak).
- Corrected Serbian locale name (Cody Precord).
- Fix wxURL::GetInputStream() for URLs with special characters in credentials
  (Robert Wruck).
- Fix wxURI::GetUser() for URIs without password.
- Correct wxDateTime DST computation for 2006 and later (Christopher Barker).

All (GUI):

- wxRTC: fixed input that uses Alt on Mac OS X, for example Polish Pro input.
  Also fixed a bug whereby e.g. Croatian keys didn't work, by moving more code
  to key down handler.
- wxRTC: fixed a problem with HTML list generation.
- wxRTC: no longer deletes a character when content is selected before
  pressing Delete.
- wxRTC: fixed inability to select no superscript and no subscript in
  formatting dialog.
- wxRTC: fixed centering and right-justification when combined with left
  indentation.
- wxRTC: fixed lack of right margin when centering or right-justifying.
- wxRTC: fixed wrong descent when wrapping lines with different font sizes.
- wxRTC: fixed wrapping problem for long lines.
- wxRTC: all buffer margins now respected.
- wxRTC: Added wxRE_CENTRE_CARET to centre the caret line vertically.
- Fixed wxHTML's pagebreaks computation in tables (D.J.Stauffer).
- Fixed wxHtmlWindow::SelectionToText() to correctly insert newlines after